# libswipetype

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
adapters/heliboard/: CMakeLists.txt  README.md  build.gradle
adapters/heliboard/src/main/: AndroidManifest.xml
adapters/heliboard/src/main/cpp/: HeliboardJNIBridge.cpp
adapters/heliboard/src/main/java/dev/dettmer/swipetype/adapters/heliboard/: HeliboardSwipeTypeAdapter.java
adapters/heliboard/src/main/java/dev/swipetype/adapters/heliboard/: HeliboardSwipeTypeAdapter.java
docs/: API.md  ARCHITECTURE.md  HOW_TO_WRITE_AN_ADAPTER.md  ONBOARDING.md
sample-app/: build.gradle
sample-app/src/main/: AndroidManifest.xml
sample-app/src/main/java/dev/dettmer/swipetype/sample/: MainActivity.java  SampleInputMethodService.java  SampleKeyboardView.java
sample-app/src/main/res/layout/: activity_main.xml
sample-app/src/main/res/raw/: en_us_sample.glide
sample-app/src/main/res/values/: styles.xml
sample-app/src/main/res/xml/: method.xml
scripts/: gen_dict.py  run_tests.sh
swipetype-android/: CMakeLists.txt  build.gradle
swipetype-android/src/main/: AndroidManifest.xml
swipetype-android/src/main/cpp/: GestureLibJNI.cpp
swipetype-android/src/main/java/dev/dettmer/swipetype/android/: GesturePoint.java  KeyboardLayoutDescriptor.java  SwipeTypeAdapter.java  SwipeTypeCandidate.java  SwipeTypeEngine.java  SwipeTypeError.java
swipetype-android/src/main/java/dev/swipetype/android/: GesturePoint.java  KeyboardLayoutDescriptor.java  SwipeTypeAdapter.java  SwipeTypeCandidate.java  SwipeTypeEngine.java  SwipeTypeError.java
swipetype-android/src/test/java/dev/dettmer/swipetype/android/: GesturePointTest.java  SwipeTypeEngineTest.java
swipetype-android/src/test/java/dev/swipetype/android/: GesturePointTest.java  SwipeTypeEngineTest.java
swipetype-core/: CMakeLists.txt
swipetype-core/include/swipetype/: DictionaryLoader.h  GestureCandidate.h  GestureEngine.h  GesturePath.h  GesturePoint.h  IdealPathGenerator.h  KeyboardLayout.h  PathProcessor.h  Scorer.h  SwipeTypeTypes.h
swipetype-core/src/: AdjacencyMap.cpp  DictionaryLoader.cpp  GestureEngine.cpp  IdealPathGenerator.cpp  PathProcessor.cpp  Scorer.cpp
swipetype-core/tests/: CMakeLists.txt  DictionaryLoaderTest.cpp  GestureEngineTest.cpp  IdealPathGeneratorTest.cpp  PathProcessorTest.cpp  ScorerTest.cpp  TestHelpers.h
test-data/: en-us-full.tsv  en-us-sample.glide  en-us-sample.tsv  gesture-scenarios.json  qwerty-standard.json
